--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -31,7 +31,8 @@ a {
 
 
 body {
-  font-family: 'Inter', sans-serif;
+  /* font-family: 'Inter', sans-serif; */
+  font-family: 'Poppins', sans-serif;
 }
 
 .app-container {
