--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -270,6 +270,13 @@ main {
   color: var(--on-background);
 }
 
+.error-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
+}
+
 @media screen and (min-width: 650px) {
   .notes-list {
     grid-template-columns: repeat(2, 1fr);
